Fix breadcrumb spacing with whitespace (#29745)

--- a/scss/_breadcrumb.scss
+++ b/scss/_breadcrumb.scss
@@ -10,6 +10,8 @@
 }
 
 .breadcrumb-item {
+  display: flex;
+
   // The separator between breadcrumbs (by default, a forward-slash: "/")
   + .breadcrumb-item {
     padding-left: $breadcrumb-item-padding;
